# tbia-portal

./: .gitignore  Dockerfile  README.md  cronjob.sh  docker-compose.yml  monthly_cronjob.sh  package-lock.json  production.yml  pyproject.toml  staging.yml
account/: admin.py  models.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_table.py  0003_auto_20210629_0714.py  (+14 more)
api/: models.py  urls.py  views.py
conf/: adapter.py  asgi.py  csp_middleware.py  settings.py  storages.py  urls.py  utils.py  wsgi.py
data/: admin.py  composites.json  get_restrict_data.py  models.py  solr_query.py  taicol.py  urls.py  utils.py  variants.json  views.py
manager/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
pages/: admin.py  custom_context_processor.py  middleware.py  models.py  urls.py  views.py
postgres/: Dockerfile
requirements/: base.txt
scripts/: cpami.py  docker-web-entry.sh  forest.py  start  taxon.py  tbn.py  tbn2db.py
solr-workspace/: Dockerfile  solr.in.sh.orig
templates/: 404.html  500.html  503.html  base-account.html  base.html  robots.txt  sitemap.xml
traefik/: docker-compose.yml  traefik.toml
ui_slicing/: about.html  footer.html  forgetpw_2.html  header.html  index.html  index_original.html  news_detial.html  news_list.html  partner.html  qa.html  register_2.html  register_3.html  resourses.html  search_all.html  search_all_result.html  search_condition_1.html  search_condition_1_de.html  search_condition_2.html  search_condition_2_de.html
utils/: solr_query.py
(+445 files in other folders)
